fix: category name 1 line and truncate (#930)

--- a/src/v4/social/pages/AllCategoriesPage/AllCategoriesPage.module.css
+++ b/src/v4/social/pages/AllCategoriesPage/AllCategoriesPage.module.css
@@ -35,6 +35,8 @@
 .allCategoryItem__categoryName {
   text-align: left;
   overflow: hidden;
+  white-space: nowrap;
+  -webkit-line-clamp: 1;
   text-overflow: ellipsis;
 }
 
